--- a/bike-trip-analysis.ipynb
+++ b/bike-trip-analysis.ipynb
@@ -14,6 +14,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38198030-f39d-4eb9-81b1-ce14d5a795ec",
+   "metadata": {},
+   "source": [
+    "# 1. Load the trip data from 2013 to 2023"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "c65f8696-2fff-4c52-8bef-cedacb95f49e",
@@ -1071,6 +1079,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2193b2b5-3de5-4ca3-89a2-b21c18f6cd3f",
+   "metadata": {},
+   "source": [
+    "# 2. Select an appropriate machine learning method and train your model using data from 2013 to 2022. Test your model's performance by evaluating its prediction accuracy using the 2023 data. In addition to presenting numerical metrics such as MAE or RMSE, plot the predicted values against the actual values for visual comparison."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "50cacf27-a342-432b-b89c-ba988727c6f2",
@@ -1587,6 +1603,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b65abf0f-5350-4ef7-b6c6-68ab825027fc",
+   "metadata": {},
+   "source": [
+    "# 3. Retrain and test your model by excluding the data collected during the COVID-19 period. Report the model's prediction performance again and compare it to the results obtained using the complete dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 155,
    "id": "69b93a3d-3c8d-4562-a189-9102a990fb1a",
@@ -1676,6 +1700,18 @@
     "plt.ylabel(\"Number of Trips\")\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43034522-b29b-4b32-a7b8-b6ae7fc48d61",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# 4. Examine the daily demand change pattern using the total number of trips recorded at each hour of the day (Task 1, Question 3). You may observe different patterns across stations.\n",
+    "#  -Group the stations into distinct clusters based on the observed patterns using time series clustering. Choose the number of clusters according to the variation in patterns you identified. You can refer to the slearn documentation for guidance on conducting time series clustering.\n",
+    "#  -Plot the clustering results on a map, using different colors to represent stations belonging to different clusters"
    ]
   },
   {
